updated tours schema - date.price, date.description
