# pt-general-go/docs/swagger.yaml
@@ -17,6 +17,8 @@ definitions:
         type: string
       id:
         type: string
+      isVip:
+        type: boolean
       language:
         type: string
       lastContactPage:
@@ -141,7 +143,7 @@ definitions:
       difficulty:
         $ref: '#/definitions/domain.DifficultyLevel'
       durationDays:
-        type: integer
+        type: string
       endLocation:
         type: string
       faq:
@@ -150,6 +152,10 @@ definitions:
         type: integer
       id:
         type: string
+      isShowRooms:
+        type: boolean
+      isShowVip:
+        type: boolean
       languages:
         items:
           type: string
@@ -170,12 +176,12 @@ definitions:
         type: string
       popUp2Title:
         type: string
-      price:
-        type: number
       program:
         type: object
       reviewsSectionName:
         type: string
+      roomPrice:
+        type: integer
       slug:
         type: string
       spotsLeft:
@@ -188,6 +194,8 @@ definitions:
         type: string
       updatedAt:
         type: string
+      vipPrice:
+        type: integer
     type: object
   domain.TourDate:
     properties:
@@ -197,12 +205,16 @@ definitions:
         type: string
       dateTo:
         type: string
+      description:
+        type: string
       groupSize:
         type: integer
       id:
         type: string
       isAvailable:
         type: boolean
+      price:
+        type: number
       tourId:
         type: string
       updatedAt:
@@ -235,7 +247,7 @@ definitions:
       difficulty:
         $ref: '#/definitions/domain.DifficultyLevel'
       durationDays:
-        type: integer
+        type: string
       endLocation:
         type: string
       faq:
@@ -248,6 +260,10 @@ definitions:
         items:
           type: string
         type: array
+      isShowRooms:
+        type: boolean
+      isShowVip:
+        type: boolean
       languages:
         items:
           type: string
@@ -272,8 +288,6 @@ definitions:
         type: string
       popUp2Title:
         type: string
-      price:
-        type: number
       program:
         type: object
       reviewAmount:
@@ -284,6 +298,8 @@ definitions:
         type: array
       reviewsSectionName:
         type: string
+      roomPrice:
+        type: integer
       slug:
         type: string
       spotsLeft:
@@ -302,6 +318,8 @@ definitions:
         type: string
       updatedAt:
         type: string
+      vipPrice:
+        type: integer
     type: object
   dto.ArticleBlockDTO:
     properties:
@@ -434,11 +452,17 @@ definitions:
         example: MEDIUM
         type: string
       durationDays:
-        example: 7
-        type: integer
+        example: "7"
+        type: string
       endLocation:
         example: Astana
         type: string
+      isShowRooms:
+        example: true
+        type: boolean
+      isShowVip:
+        example: true
+        type: boolean
       languages:
         example:
         - English
@@ -449,14 +473,14 @@ definitions:
       minAge:
         example: 18
         type: integer
-      price:
-        example: 1500
-        type: number
       program:
         type: object
       reviewsSectionName:
         example: Why travelers love this
         type: string
+      roomPrice:
+        example: 200
+        type: integer
       slug:
         example: mountain-adventure
         type: string
@@ -466,6 +490,9 @@ definitions:
       title:
         example: Mountain Adventure
         type: string
+      vipPrice:
+        example: 500
+        type: integer
     required:
     - description
     - difficulty
@@ -544,11 +571,17 @@ definitions:
         example: HARD
         type: string
       durationDays:
-        example: 10
-        type: integer
+        example: "10"
+        type: string
       endLocation:
         example: Osh
         type: string
+      isShowRooms:
+        example: true
+        type: boolean
+      isShowVip:
+        example: true
+        type: boolean
       languages:
         example:
         - English
@@ -560,14 +593,14 @@ definitions:
       minAge:
         example: 21
         type: integer
-      price:
-        example: 2000
-        type: number
       program:
         type: object
       reviewsSectionName:
         example: Why travelers love this
         type: string
+      roomPrice:
+        example: 200
+        type: integer
       slug:
         example: mountain-adventure-updated
         type: string
@@ -577,6 +610,9 @@ definitions:
       title:
         example: Mountain Adventure Updated
         type: string
+      vipPrice:
+        example: 500
+        type: integer
     type: object
   dto.UserDTO:
     properties:
@@ -1530,8 +1566,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get full tour information by slug including guide, dates, photos,
-        videos, materials, tags, and categories
+      description: Get full tour information by slug including guide, dates, photos
       parameters:
       - description: Tour slug
         in: path
